<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activities.AddPartsActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_back"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:text="@string/add_parts"
        android:textSize="25sp"
        android:textColor="@color/primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageBack"
        app:layout_constraintTop_toTopOf="@id/imageBack" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageBack">

        <TextView
            android:id="@+id/QR"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginStart="30dp"
            android:textSize="25sp"
            android:text="@string/barcode_no"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageQR"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/ic_camera"
            app:layout_constraintTop_toTopOf="@id/QR"
            app:layout_constraintStart_toEndOf="@id/QR"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_barcode"
            android:textAlignment="center"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/imageQR"
            app:layout_constraintTop_toTopOf="@id/imageQR"
            app:layout_constraintBottom_toBottomOf="@id/imageQR"/>

        <EditText
            android:id="@+id/textQR"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/primary"
            android:nextFocusRight="@id/partsName"
            android:hint="@string/barcode_no"
            android:textColor="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/QR"
            app:layout_constraintTop_toBottomOf="@id/QR" />

        <TextView
            android:id="@+id/partsName"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginStart="30dp"
            android:textSize="25sp"
            android:text="@string/parts_name"
            app:layout_constraintTop_toBottomOf="@id/textQR"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/textPartsName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/parts_name"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/primary"
            android:textColor="@color/primary"
            android:inputType="text"
            android:maxLines="1"
            android:nextFocusDown="@id/partsPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/partsName"
            app:layout_constraintTop_toBottomOf="@id/partsName" />
        <TextView
            android:id="@+id/partsPrice"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginStart="30dp"
            android:textSize="25sp"
            android:text="@string/parts_price"
            app:layout_constraintTop_toBottomOf="@id/textPartsName"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/textPartsPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/parts_price"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:textColor="@color/primary"
            android:inputType="numberDecimal"
            android:backgroundTint="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/partsPrice"
            app:layout_constraintTop_toBottomOf="@id/partsPrice" />
        <TextView
            android:id="@+id/partsAmount"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginStart="30dp"
            android:textSize="25sp"
            android:text="@string/parts_amount"
            app:layout_constraintTop_toBottomOf="@id/textPartsPrice"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/textPartsAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/primary"
            android:hint="@string/parts_amount"
            android:backgroundTint="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/partsAmount"
            app:layout_constraintTop_toBottomOf="@id/partsAmount" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:padding="10dp"
            app:cornerRadius="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textPartsAmount" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textPartsAmount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>