<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.LoginActivity">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_marginTop="50dp"
        android:layout_height="80dp"
        android:src="@drawable/parca"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textColor="@color/primary_dark"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/inputEmail"
        app:layout_constraintTop_toBottomOf="@id/logo"
        tools:layout_editor_absoluteX="30dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/primary_dark"
        app:hintTextColor="@color/primary_dark"
        android:hint="@string/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/login">

            <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/primary_dark"
            android:textColorHint="@color/primary_dark"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/primary_dark"
        app:hintTextColor="@color/primary_dark"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/inputEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:text="@string/register"
        android:textSize="20sp"
        android:textColor="@color/primary_dark"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/primary_dark"
        android:textSize="20sp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/primary_dark"
        app:layout_constraintTop_toBottomOf="@id/textRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>