<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/app_name"
        android:textColor="@color/primary_dark"
        android:textSize="40sp"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageSignOut"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_signout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/primary_dark"
        android:textSize="15sp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@id/textAdminName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/textAdminName"
        app:layout_constraintTop_toBottomOf="@+id/textAppName"/>
    <TextView
        android:id="@+id/textAdminName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:textSize="25sp"
        android:textColor="@color/primary_dark"
        android:text="@string/name"
        app:layout_constraintTop_toBottomOf="@id/textAppName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textDate"/>


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/textDate"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewAddStaff"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:elevation="8dp"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="16dp"
                    android:layout_gravity="center_horizontal|center_vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/add_user"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_staff"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/primary_dark"
                        android:textAlignment="center"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewStaffList"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:elevation="8dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="16dp"
                    android:layout_gravity="center_horizontal|center_vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/users_list"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/list_of_staff"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/primary_dark"
                        android:textAlignment="center"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewAddParts"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:elevation="8dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="16dp"
                    android:layout_gravity="center_horizontal|center_vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/add_parts"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_parts"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/primary_dark"
                        android:textAlignment="center"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewPartsList"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:elevation="8dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="16dp"
                    android:layout_gravity="center_horizontal|center_vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/list_parts"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/list_of_parts"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/primary_dark"
                        android:textAlignment="center"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>



</androidx.constraintlayout.widget.ConstraintLayout>